<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_lunch"
            android:icon="@drawable/outline_restaurant_menu_black_18"
            android:title="YOUR LUNCH" />
        <item
            android:id="@+id/activity_main_drawer_settings"
            android:icon="@drawable/baseline_settings_black_18"
            android:title="SETTINGS" />
        <item
            android:id="@+id/activity_main_drawer_logout"
            android:icon="@drawable/outline_power_settings_new_black_18"
            android:title="LOGOUT" />
    </group>

</menu>

