<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/sharp_map_black_24"
        android:title="@string/bottom_navigation_menu_map_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/baseline_list_black_24"
        android:title="@string/bottom_navigation_menu_list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workmates"
        android:enabled="true"
        android:icon="@drawable/baseline_people_black_24"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />

</menu>